--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Generate PDFs
         shell: bash
-        working-directory: docs/design-document
+        working-directory: ${{ github.workspace }}/docs/design-document
         run: |
           sudo apt-get update
           sudo apt-get -y install \
