--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -69,4 +69,5 @@ jobs:
             *.tex \
             *.bib
           git commit -m "Push PDF and source files"
+          git pull
           git push
