--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -5359,3 +5359,79 @@
 /config.local
 /tmp
 /cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
