--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -3,6 +3,8 @@ on:
   push:
     paths:
       - "Final_Project_Team_3_Deliverable_2.pptx"
+      - "./github/workflows/generate-video.yml"
+      - "./scripts/pptx2video.py"
   workflow_dispatch:
 
 concurrency:
