--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -88,7 +88,7 @@ jobs:
           git pull origin main --rebase
           git push origin main
 
-      - name: Report failure (Redundant - workflow will fail if video generation fails)
+      - name: Check for failure
         if: steps.check_video.outputs.video_created == 'false'
         run: |
           echo "Video generation failed. Please check the logs for errors."
