--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -46,12 +46,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install \
-              openai \
+              aiohttp \
               moviepy \
               numpy \
+              openai \
               pdf2image \
               Pillow==6.2.2 \
-              python-pptx
+              python-pptx \
+              tenacity
 
       - name: Generate Video
         id: generate
